<resources>
    <string name="app_name">Pocket Survey</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="name">Enter your Name</string>
    <string name="contactnumber">Enter your Contact number</string>
    <string name="register">Register</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>

</resources>
