<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login"
    android:background="@drawable/formbackground">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ellipsize="start"
        android:gravity="center"
        android:background="@drawable/edittextstyle"
        android:hint="@string/username"
        android:id="@+id/etUsername"
        android:layout_marginTop="40dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ellipsize="start"
        android:gravity="center"
        android:background="@drawable/edittextstyle"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password"
        android:id="@+id/etPassword"
        android:layout_below="@+id/etUsername"
        android:layout_marginTop="40dp" />

    <info.hoang8f.widget.FButton
        fbutton:buttonColor="#5868C2"
        fbutton:shadowColor="#25358F"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        fbutton:cornerRadius="5dp"
        fbutton:shadowEnabled="true"
        fbutton:shadowHeight="8dp"
        android:textSize="18sp"
        android:id="@+id/bLogin"
        android:text="@string/login"
        android:layout_centerVertical="true"
        android:textColor="#ffffff"

        />






</RelativeLayout>
