<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="kunalganglani.com.suveyji.Register"
        android:background="@drawable/formbackground">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ellipsize="start"
            android:gravity="center"
            android:background="@drawable/edittextstyle"
            android:hint="@string/fname"
            android:id="@+id/etFName"
            android:layout_marginTop="40dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ellipsize="start"
            android:gravity="center"
            android:background="@drawable/edittextstyle"
            android:hint="@string/lname"
            android:id="@+id/etLName"
            android:layout_below="@+id/etFName"
            android:layout_marginTop="40dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ellipsize="start"
            android:gravity="center"
            android:background="@drawable/edittextstyle"
            android:hint="Enter City"
            android:id="@+id/etCity"
            android:layout_below="@+id/etLName"
            android:layout_marginTop="40dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ellipsize="start"
            android:gravity="center"
            android:background="@drawable/edittextstyle"
            android:hint="Enter Age"
            android:id="@+id/etAge"
            android:layout_below="@+id/etCity"
            android:layout_marginTop="40dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:hint="Select Gender"
            android:id="@+id/selectgender"
            android:layout_height="wrap_content"
            android:ellipsize="start"
            android:textSize="18sp"
            android:layout_below="@+id/etAge"
            android:layout_marginTop="40dp"
            />

        <RadioGroup
            android:id="@+id/etGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/selectgender"
            android:layout_marginTop="0dp"
            android:background="@drawable/edittextstyle"
            >
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="18sp"
                android:textColor="#736F6E"
                android:text="Male"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="18sp"
                android:textColor="#736F6E"
                android:text="Female"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="18sp"
                android:textColor="#736F6E"
                android:text="Others"/>
        </RadioGroup>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ellipsize="start"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:background="@drawable/edittextstyle"
            android:hint="Enter Dob"
            android:id="@+id/etDob"
            android:layout_below="@+id/etGender"
            android:layout_marginTop="40dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ellipsize="start"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:background="@drawable/edittextstyle"
            android:hint="@string/contactnumber"
            android:id="@+id/etContactnumber"
            android:layout_below="@+id/etDob"
            android:layout_marginTop="40dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ellipsize="start"
            android:gravity="center"
            android:background="@drawable/edittextstyle"
            android:hint="@string/username"
            android:id="@+id/etUsername"
            android:layout_below="@+id/etContactnumber"
            android:layout_marginTop="40dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/password"
            android:id="@+id/etPassword"
            android:layout_below="@+id/etUsername"
            android:layout_marginTop="40dp"
            android:layout_height="40dp"
            android:ellipsize="start"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:background="@drawable/edittextstyle"
            />

        <EditText
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/confirmpassword"
            android:id="@+id/etPassword2"
            android:layout_below="@+id/etPassword"
            android:layout_marginTop="40dp"
            android:layout_height="40dp"
            android:ellipsize="start"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:background="@drawable/edittextstyle"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id ="@+id/lLayoutCamButton"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/etPassword2"
            android:padding="5dp" >

            <info.hoang8f.widget.FButton
                fbutton:buttonColor="#5868C2"
                fbutton:shadowColor="#25358F"
                android:minHeight="50dp"
                fbutton:cornerRadius="5dp"
                fbutton:shadowEnabled="true"
                fbutton:shadowHeight="8dp"
                android:id="@+id/btnSelectPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Select Photo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/lLayoutImageView"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/lLayoutCamButton"
            android:orientation="vertical"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50pt"
                android:layout_height="50pt"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_launcher" />
        </LinearLayout>

        <info.hoang8f.widget.FButton
            fbutton:buttonColor="#5868C2"
            fbutton:shadowColor="#25358F"
            android:minHeight="50dp"
            fbutton:cornerRadius="5dp"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/bRegister"
            android:layout_centerVertical="true"
            android:layout_below="@+id/lLayoutImageView"
            android:layout_marginTop="40dp"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:background="@drawable/mybutton"
            />
    </RelativeLayout>

</ScrollView>